syntax = "proto3";

package ru.practicum.ewm.stats.avro;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service UserActionController {
  rpc CollectUserAction(UserActionProto) returns (google.protobuf.Empty);
}
